Update Activity_ Course 4 Automatidata project lab.ipynb

--- a/Course4_PowerOfStatistics/Activity_ Course 4 Automatidata project lab.ipynb
+++ b/Course4_PowerOfStatistics/Activity_ Course 4 Automatidata project lab.ipynb
@@ -209,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Anser: Descriptive statistics let you quickly explore and understand large amounts of data. Computing descriptive statistics helps us quickly compare average of total fare amount among different payment types."
+    "Answer: Descriptive statistics let you quickly explore and understand large amounts of data. Computing descriptive statistics helps us quickly compare average of total fare amount among different payment types."
    ]
   },
   {
