Update Course 5 TikTok project lab.ipynb

--- a/Course5_RegressionAnalysis_SimplifyComplexDataRelationships/Course 5 TikTok project lab.ipynb
+++ b/Course5_RegressionAnalysis_SimplifyComplexDataRelationships/Course 5 TikTok project lab.ipynb
@@ -2254,7 +2254,7 @@
     "id": "8R4Gd7OoZdAu"
    },
    "source": [
-    "**Exemplar note:** The `#` and `video_id` columns are not selected as features here, because they do not seem to be helpful for predicting whether a video presents a claim or an opinion. Also, `video_like_count` is not selected as a feature here, because it is strongly correlated with other features, as discussed earlier. And logistic regression has a no multicollinearity model assumption that needs to be met."
+    " The `#` and `video_id` columns are not selected as features here, because they do not seem to be helpful for predicting whether a video presents a claim or an opinion. Also, `video_like_count` is not selected as a feature here, because it is strongly correlated with other features, as discussed earlier. And logistic regression has a no multicollinearity model assumption that needs to be met."
    ]
   },
   {
@@ -4238,7 +4238,7 @@
     "id": "zy4YlWJIpakL"
    },
    "source": [
-    "**Exemplar note:** The classification report above shows that the logistic regression model achieved a precision of 61% and a recall of 84%, and it achieved an accuracy of 65%. Note that the precision and recall scores are taken from the \"not verified\" row of the output because that is the target class that we are most interested in predicting. The \"verified\" class has its own precision/recall metrics, and the weighted average represents the combined metrics for both classes of the target variable."
+    "The classification report above shows that the logistic regression model achieved a precision of 61% and a recall of 84%, and it achieved an accuracy of 65%. Note that the precision and recall scores are taken from the \"not verified\" row of the output because that is the target class that we are most interested in predicting. The \"verified\" class has its own precision/recall metrics, and the weighted average represents the combined metrics for both classes of the target variable."
    ]
   },
   {
